[package]
name = "wasabi"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_winit_vulkano = "0.24.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
vulkano-util = "0.33.0"
egui-winit = "0.21.1"
bytemuck = "1.13.1"
vulkano = "0.33.0"
kdmapi = { git = "https://github.com/arduano/kdmapi.git", rev = "4116b00" }
egui = "0.21.0"
winit = "0.28.3"
rayon = "1.7.0"
midi-toolkit-rs = { git = "https://github.com/arduano/midi-toolkit-rs.git", rev = "a54f198" }
xsynth-core = { git = "https://github.com/arduano/xsynth.git", rev = "3385cd0" }
xsynth-realtime = { git = "https://github.com/arduano/xsynth.git", rev = "3385cd0" }
gen-iter = { git = "https://github.com/arduano/gen-iter.git", rev = "64e28bc" }
enum_dispatch = "0.3.11"
palette = "0.7.1"
crossbeam-channel = "0.5.8"
rand = "0.8.5"
confy = "0.5.1"
serde_derive = "1.0.160"
serde = "1.0.160"
toml = "0.8.0"
colors-transform = "0.2.11"
directories = "5.0.0"
rustc-hash = "1.1.0"
atomic_float = "0.1.0"
ico = { git = "https://github.com/StratusFearMe21/rust-ico", branch = "patch-1" }
clap = "4.2.4"
num_enum = "0.7.0"
rfd = { version = "0.12.0", default-features = false, features = [
    'xdg-portal',
] }

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[build-dependencies]
resvg = { version = "0.31.0", default-features = false }
ico = { git = "https://github.com/StratusFearMe21/rust-ico", branch = "patch-1" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
