[package]
name = "wasabi"
version = "1.0.0"
edition = "2021"

[dependencies]
egui = { version = "0.29", features = ["serde"] }
egui_extras = { version = "0.29", features = ["svg"] }
egui-winit = "0.29"
egui_winit_vulkano = { git = "https://github.com/MyBlackMIDIScore/egui_winit_vulkano.git", rev = "aa24f97" }
winit = { version = "0.30", default-features = false }
raw-window-handle = "0.6"
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "4a77d39" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "4a77d39" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "4a77d39" }
midi-toolkit-rs = "0.1.0"
xsynth-core = { git = "https://github.com/BlackMIDIDevs/xsynth", rev = "818dbd6", features = ["serde"] }
xsynth-realtime = { git = "https://github.com/BlackMIDIDevs/xsynth", rev = "818dbd6", features = ["serde"] }
kdmapi-rs = { package = "kdmapi", git = "https://github.com/MyBlackMIDIScore/kdmapi-rs.git", rev = "e1db353" }
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0"
toml = "0.8.19"
bytemuck = "1.18.0"
rayon = "1.10"
enum_dispatch = "0.3.13"
gen-iter = { git = "https://github.com/arduano/gen-iter.git", rev = "64e28bc" }
crossbeam-channel = "0.5.13"
rustc-hash = "2.0.0"
rand = "0.8.5"
directories = "5.0.1"
atomic_float = "1.1.0"
ico = "0.3.0"
rfd = "0.15.0"
open = "5.3.0"
midir = "0.10.0"
time = "0.3.36"
image = "0.25.2"
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
spin_sleep = "1.2.1"
tokio = { version = "1.40.0", features = ["sync"] }

num_enum = "0.7.3"
palette = "0.7.6"
colors-transform = "0.2"

[build-dependencies]
resvg = { version = "0.31.0", default-features = false }
ico = "0.3.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
