[package]
name = "wasabi"
version = "1.0.2"
edition = "2021"

[dependencies]
egui = { version = "0.31.0", features = ["serde"] }
egui_extras = { version = "0.31.0", features = ["svg"] }
egui-winit = "0.31.0"
egui_winit_vulkano = "0.28.0"
winit = { version = "0.30.12", default-features = false }
raw-window-handle = "0.6"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
vulkano-win = "0.34.0"
midi-toolkit-rs = "0.1.0"
xsynth-core = { version = "0.3.4", features = ["serde"] }
xsynth-realtime = { version = "0.3.4", features = ["serde"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.142"
toml = "0.9.5"
bytemuck = "1.23.2"
rayon = "1.11.0"
enum_dispatch = "0.3.13"
gen-iter = { git = "https://github.com/arduano/gen-iter.git", rev = "64e28bc" }
crossbeam-channel = "0.5.15"
rustc-hash = "2.1.1"
rand = "0.9.2"
directories = "6.0.0"
atomic_float = "1.1.0"
ico = "0.4.0"
rfd = "0.15.4"
open = "5.3.2"
time = "0.3.41"
image = "0.25.6"
reqwest = { version = "0.12.23", features = [
  "json",
  "blocking",
  "native-tls-vendored",
] }
spin_sleep = "1.3.2"
tokio = { version = "1.47.1", features = ["sync"] }

num_enum = "0.7.4"
palette = "0.7.6"
colors-transform = "0.2"
numfmt = "1.2.0"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
kdmapi-rs = { package = "kdmapi", git = "https://github.com/BlackMIDIDevs/kdmapi-rs", rev = "aa39558" }
midir = "0.10.2"

[build-dependencies]
resvg = { version = "0.32.0", default-features = false }
ico = "0.4.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
